<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:text="@string/send_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sendEmailButton"
        android:layout_above="@+id/callButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:elevation="0dp"
        android:onClick="sendEmail" />

    <Button
        android:text="@string/call_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/callButton"
        android:onClick="callNumber"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:elevation="0dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/mosque"
        android:id="@+id/imageView2"
        android:cropToPadding="false"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/clinic_status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clinicOpenStaticTextView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/loading_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clinicOpen"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textAlignment="center"
        android:fontFamily="cursive"
        android:textSize="40sp"
        android:layout_below="@+id/clinicOpenStaticTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/doctorTextView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:fontFamily="cursive"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:text="@string/loading_text"
        android:layout_below="@+id/doctorStaticTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/doctor_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/doctorStaticTextView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_below="@+id/clinicOpen"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp" />

</RelativeLayout>